# QtToastify

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
Toastify/: CMakeLists.txt  README.md  Toastify.qml  ToastifyDelegate.qml  ToastifyStyle.qml
Toastify/Style/: CMakeLists.txt  CompactStyleProvider.qml  DarkStyleProvider.qml  MaterialStyleProvider.qml  ToastifyStyleProvider.qml
playground/: CMakeLists.txt  CompactLayoutExample.qml  CustomStyleExample.qml  LightThemeExample.qml  PlaygorundMainPage.qml  PlaygroundApp.qml  PromiseToastExample.qml  README.md  StyleCustomizationGuide.md  StyledToastDelegate.qml  playground_main.cpp
playground/styles/: CompactStyle.qml  CustomStyle.qml  DefaultStyle.qml  LightStyle.qml
qml/: Main.qml  ShowcaseAdvanced.qml  ShowcaseSimple.qml
tests/: CMakeLists.txt  main.cpp  tst_container_boundary.qml
